lesson12-stream 16.05.2023